@@ -58,6 +58,7 @@
           //grove LCD
           'grove_serial_lcd_print', 'grove_serial_lcd_power',
           'grove_serial_lcd_effect', 'grove_ultrasonic_ranger',
+          'grove_motor_shield',
           //control
           'base_delay', 'controls_if', 'controls_if_if', 'controls_if_elseif', 'controls_if_else', 'controls_for',
           //'controls_whileUntil', 'controls_flow_statements',
